--- a/cartellaCss/foglio.css
+++ b/cartellaCss/foglio.css
@@ -1,6 +1,8 @@
 body {
-    background-color: rgb(33, 37, 41)
+    background-color: rgb(43, 48, 53)
 }
+
+
 
 #a1 {
     width: 80px;
@@ -9,11 +11,22 @@ body {
 
 h6 {
     padding-top: 5px;
+    padding-right: 20px;
+    color: white;
 }
 
 #b8 {
     width: 20px;
     height: 20px;
+    padding-right: 20px;
+    color: white;
+}
+
+#b9 { 
+    width: 20px;
+    height: 20px;
+    padding-right: 20px;
+    color: white;
 }
 
 section {
@@ -21,7 +34,7 @@ section {
     margin-right: 20px;
     padding-top: 20px;
     padding-bottom: 20px;
-    background-color: rgb(33, 37, 41)
+    background-color: rgb(43, 48, 53)
 }
 
 main {
@@ -44,22 +57,22 @@ h3 {
 }
 
 #a3 {
-    width: 16px;
-    height: 16px;
+    width: 25px;
+    height: 25px;
 }
 
 #a4 {
     width: 17px;
     height: 17px;
+   
 }
+
 
 .d-flex.align-items-center.grid.gap-3 {
     color: white;
+    
 }
 
-.nav-link {
-    color: white !important
-}
 
 h4 {
     color: white;
@@ -84,6 +97,7 @@ h4 {
 .col-12.col-md-6.col-lg-3.gy-3.s7 svg {
     width: 30px;
     height: 30px;
+    
    
 }
    
@@ -93,10 +107,24 @@ h4 {
 
 }
 
-.btn.dropdown-toggle {
+.col-12.col-md-6.col-lg-3.gy-3.s7 div {
+    text-align: center;
+    padding-top: 15px;
+}
+
+p {
+    text-align: center;
+}
+
+.btn.dropdown-toggle.x3 {
     background-color: black;
     color: white;
+    border: 1px solid white;
+    margin-left: -10px;
+    margin-top: -6px;
 }
+
+
 
 
 
