--- a/cartellaCss/foglio.css
+++ b/cartellaCss/foglio.css
@@ -52,6 +52,7 @@ h3 {
     border: 1px solid gray;
 }
 
+
 .a2 svg {
     color: white;
 }
@@ -62,9 +63,12 @@ h3 {
 }
 
 #a4 {
-    width: 17px;
-    height: 17px;
-   
+    width: 25px;
+    height: 19px;
+    padding-left: 5px;
+    padding-right: 5px;;
+    border: 2px solid white;
+    margin-left: -5px;
 }
 
 
@@ -124,7 +128,9 @@ p {
     margin-top: -6px;
 }
 
-
+.zx {
+    padding-bottom: 7px;
+}
 
 
 
